[gd_scene load_steps=34 format=2]

[ext_resource path="res://assets/players/ray/ray.png" type="Texture" id=1]
[ext_resource path="res://assets/players/ray/eyes.png" type="Texture" id=2]
[ext_resource path="res://assets/GlacialIndifference-Italic.otf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/players/ray/controller.png" type="Texture" id=4]
[ext_resource path="res://animations/ray_stab.tres" type="Animation" id=5]
[ext_resource path="res://animations/ray_attack.tres" type="Animation" id=6]
[ext_resource path="res://animations/jump.tres" type="Animation" id=7]
[ext_resource path="res://animations/idle.tres" type="Animation" id=8]
[ext_resource path="res://animations/run.tres" type="Animation" id=9]
[ext_resource path="res://animations/fall.tres" type="Animation" id=10]
[ext_resource path="res://scripts/body.gd" type="Script" id=11]
[ext_resource path="res://scenes/smash.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/players/hand.png" type="Texture" id=13]
[ext_resource path="res://assets/players/ray/body.png" type="Texture" id=14]
[ext_resource path="res://assets/players/ray/arm.png" type="Texture" id=15]
[ext_resource path="res://scenes/bars.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/leg.png" type="Texture" id=17]
[ext_resource path="res://assets/players/ray/flag.png" type="Texture" id=18]
[ext_resource path="res://scripts/ray.gd" type="Script" id=19]
[ext_resource path="res://assets/players/ray/boxing1.png" type="Texture" id=20]
[ext_resource path="res://assets/players/ray/boxing2.png" type="Texture" id=21]
[ext_resource path="res://assets/players/ray/pole.png" type="Texture" id=22]
[ext_resource path="res://assets/players/ray/dot.png" type="Texture" id=23]
[ext_resource path="res://animations/die.tres" type="Animation" id=24]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 69.857, 54.4251 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20, 42 )

[sub_resource type="DynamicFont" id=4]
size = 18
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=5]
resource_name = "boxing"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite/handL:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 11.3103, 13.5926 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KinematicBody2D/Sprite/handL:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 93.6905 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("KinematicBody2D/Sprite/handR:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 16.4566, 6.45021 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("KinematicBody2D/Sprite/handR:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -41.8046 ]
}

[sub_resource type="Animation" id=6]
resource_name = "boxing_idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite/handL:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 11.3103, 17.5798 ), Vector2( 10.7407, 21.567 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KinematicBody2D/Sprite/handL:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 121.717, 121.717 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("KinematicBody2D/Sprite/handR:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 16.4566, 10.4374 ), Vector2( 15.887, 14.4246 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("KinematicBody2D/Sprite/handR:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -13.7782, -13.7782 ]
}

[sub_resource type="Animation" id=7]
resource_name = "gun"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite/gun:z_index")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KinematicBody2D/Sprite/handL:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 10.646, 22.8935 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("KinematicBody2D/Sprite/handL:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 93.6905 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("KinematicBody2D/Sprite/handR:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 29.7435, 7.11456 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("KinematicBody2D/Sprite/handR:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -41.8046 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("KinematicBody2D/Sprite/gun:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 36.9166, 10.0139 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("KinematicBody2D/Sprite/gun:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 130.786 ]
}

[sub_resource type="Animation" id=8]
resource_name = "rush"
length = 0.65
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite/handL:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 12.4495, 14.7318 ), Vector2( 40.0493, 10.632 ), Vector2( 4.0305, 21.3555 ), Vector2( 34.2518, -1.26797 ), Vector2( -4.76693, -6.21811 ), Vector2( 38.9685, -14.7297 ), Vector2( -3.51705, 15.7603 ), Vector2( 12.4495, 14.7318 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KinematicBody2D/Sprite/handL:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 93.6905, 93.6905, 93.6905, 73.6497, 110.954, 110.954, 110.954, 93.6905 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("KinematicBody2D/Sprite/handR:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 7.91263, 10.4374 ), Vector2( 0.391262, 9.53973 ), Vector2( 41.7648, -1.30761 ), Vector2( -1.56107, -3.60304 ), Vector2( 36.1957, 10.9375 ), Vector2( -3.42785, 15.4801 ), Vector2( 45.141, -19.2717 ), Vector2( 7.91263, 10.4374 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("KinematicBody2D/Sprite/handR:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -26.2588, -26.2588, -26.2588, -6.14901, -6.14901, -51.7685, -51.7685, -26.2588 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("KinematicBody2D/Sprite/head:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 5.56692, -22.0152 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("KinematicBody2D/Sprite/head:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("KinematicBody2D/Sprite/handR/weapon:monitoring")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false, true, false, true, false, true, false ]
}

[sub_resource type="Animation" id=9]
resource_name = "ult"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite/ult:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KinematicBody2D/Sprite/ult:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -4.73377, -102.434, -1.71273 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("KinematicBody2D/Sprite/ult:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[node name="ray" type="Node2D"]
script = ExtResource( 19 )
Smash = ExtResource( 12 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="." groups=[
"player",
]]
scale = Vector2( 0.9, 0.9 )
script = ExtResource( 11 )
Bars = ExtResource( 16 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]

[node name="body" type="Sprite" parent="KinematicBody2D/Sprite"]
position = Vector2( 0.464579, 4.8883 )
texture = ExtResource( 14 )

[node name="head" type="Sprite" parent="KinematicBody2D/Sprite"]
position = Vector2( -0.412223, -24.6726 )
z_index = 1
texture = ExtResource( 1 )

[node name="eyes" type="Sprite" parent="KinematicBody2D/Sprite/head"]
visible = false
texture = ExtResource( 2 )

[node name="handL" type="Sprite" parent="KinematicBody2D/Sprite"]
self_modulate = Color( 0.784314, 0.682353, 0.482353, 1 )
position = Vector2( -18.7074, 9.20673 )
scale = Vector2( 0.5, 0.5 )
z_index = 2
texture = ExtResource( 13 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D/Sprite/handL"]
visible = false
position = Vector2( -6.29025, -22.3359 )
rotation = -0.250155
texture = ExtResource( 20 )

[node name="handR" type="Sprite" parent="KinematicBody2D/Sprite"]
self_modulate = Color( 0.784314, 0.682353, 0.482353, 1 )
position = Vector2( 21.3266, 9.69692 )
scale = Vector2( 0.5, 0.5 )
z_index = -3
texture = ExtResource( 13 )

[node name="weapon" type="Area2D" parent="KinematicBody2D/Sprite/handR"]
position = Vector2( -42.6532, -19.3938 )
scale = Vector2( 2.22222, 2.22222 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D/Sprite/handR/weapon"]
position = Vector2( 24.539, 7.12315 )
rotation = 1.84106
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 21 )
offset = Vector2( 6.90869, -6.25837 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Sprite/handR/weapon"]
visible = false
position = Vector2( 27.1137, 11.5382 )
rotation = -1.13229
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="KinematicBody2D/Sprite/handR/weapon"]
visible = false
position = Vector2( -19.6388, 9.59021 )
rotation = -1.13229
shape = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="KinematicBody2D/Sprite/handR/weapon"]
position = Vector2( -25.8088, 8.23067 )
rotation = -1.78309
scale = Vector2( 0.5, 0.5 )
z_index = 5
texture = ExtResource( 20 )
offset = Vector2( -0.749772, -20.0942 )

[node name="legL" type="Sprite" parent="KinematicBody2D/Sprite"]
self_modulate = Color( 0.203922, 0.203922, 0.203922, 1 )
position = Vector2( -8.19322, 23.9495 )
rotation = 0.0724322
z_index = -1
texture = ExtResource( 17 )

[node name="legR" type="Sprite" parent="KinematicBody2D/Sprite"]
self_modulate = Color( 0.203922, 0.203922, 0.203922, 1 )
position = Vector2( 7.0291, 24.3478 )
rotation = -0.113724
z_index = -2
texture = ExtResource( 17 )

[node name="gun" type="Sprite" parent="KinematicBody2D/Sprite"]
visible = false
position = Vector2( 36.9166, 10.0139 )
rotation = 2.28265
scale = Vector2( 0.6, 0.6 )
z_index = 2
texture = ExtResource( 4 )
offset = Vector2( 25.9258, 1.28654 )

[node name="dot" type="Sprite" parent="KinematicBody2D/Sprite/gun"]
visible = false
position = Vector2( 26.1583, 1.25417 )
texture = ExtResource( 23 )

[node name="ult" type="Area2D" parent="KinematicBody2D/Sprite"]
visible = false
rotation = -0.0826199
monitoring = false

[node name="arm" type="Sprite" parent="KinematicBody2D/Sprite/ult"]
position = Vector2( -43.264, -1.16665 )
z_index = 1
texture = ExtResource( 15 )

[node name="arm2" type="Sprite" parent="KinematicBody2D/Sprite/ult"]
position = Vector2( 34.6982, 6.33938 )
rotation = -0.113137
texture = ExtResource( 15 )
offset = Vector2( 18.5016, -7.89349 )
flip_h = true

[node name="flag" type="Sprite" parent="KinematicBody2D/Sprite/ult"]
position = Vector2( 92.2774, 14.2427 )
rotation = 1.54594
texture = ExtResource( 18 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D/Sprite/ult/flag"]
texture = ExtResource( 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Sprite/ult"]
position = Vector2( 168.482, 21.3224 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 1.2605, -6.96839 )
shape = SubResource( 3 )

[node name="Label" type="Label" parent="KinematicBody2D"]
margin_left = -102.082
margin_top = -72.1979
margin_right = 97.918
margin_bottom = -49.1978
custom_fonts/font = SubResource( 4 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fall = ExtResource( 10 )
anims/idle = ExtResource( 8 )
anims/jump = ExtResource( 7 )
anims/run = ExtResource( 9 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/attack = ExtResource( 6 )
anims/boxing = SubResource( 5 )
anims/boxing_idle = SubResource( 6 )
anims/die = ExtResource( 24 )
anims/gun = SubResource( 7 )
anims/rush = SubResource( 8 )
anims/stab = ExtResource( 5 )
anims/ult = SubResource( 9 )

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="RushTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="UltTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
[connection signal="body_entered" from="KinematicBody2D/Sprite/handR/weapon" to="KinematicBody2D" method="_on_weapon_body_entered"]
[connection signal="body_entered" from="KinematicBody2D/Sprite/ult" to="." method="_on_ult_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer2" to="." method="_on_AnimationPlayer2_animation_finished"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
[connection signal="timeout" from="RushTimer" to="." method="_on_RushTimer_timeout"]
[connection signal="timeout" from="UltTimer" to="." method="_on_UltTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="KinematicBody2D" method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
